--- a/notebooks/calibration.ipynb
+++ b/notebooks/calibration.ipynb
@@ -30,15 +30,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Ripserer, PersistenceDiagrams, PersistenceDiagramsBase\n",
-    "using InteractiveUtils, MLDataUtils, JLD2"
+    "using Ripserer, PersistenceDiagrams, PersistenceDiagramsBase"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "InitError: could not load library \"/storage/home/s/suv87/work/julia_depot/artifacts/b069ad81d556658ea64a543367e128e535fab269/lib/libgobject-2.0.so\"\n/storage/home/s/suv87/work/julia_depot/artifacts/b069ad81d556658ea64a543367e128e535fab269/lib/libgobject-2.0.so: undefined symbol: g_uri_ref\nduring initialization of module Glib_jll",
+     "output_type": "error",
+     "traceback": [
+      "InitError: could not load library \"/storage/home/s/suv87/work/julia_depot/artifacts/b069ad81d556658ea64a543367e128e535fab269/lib/libgobject-2.0.so\"\n/storage/home/s/suv87/work/julia_depot/artifacts/b069ad81d556658ea64a543367e128e535fab269/lib/libgobject-2.0.so: undefined symbol: g_uri_ref\nduring initialization of module Glib_jll",
+      "",
+      "Stacktrace:",
+      "  [1] dlopen(s::String, flags::UInt32; throw_error::Bool)",
+      "    @ Base.Libc.Libdl ./libdl.jl:117",
+      "  [2] dlopen(s::String, flags::UInt32)",
+      "    @ Base.Libc.Libdl ./libdl.jl:117",
+      "  [3] macro expansion",
+      "    @ /storage/home/s/suv87/work/julia_depot/packages/JLLWrappers/QpMQW/src/products/library_generators.jl:54 [inlined]",
+      "  [4] __init__()",
+      "    @ Glib_jll /storage/home/s/suv87/work/julia_depot/packages/Glib_jll/2OVnY/src/wrappers/x86_64-linux-gnu.jl:36",
+      "  [5] _include_from_serialized(path::String, depmods::Vector{Any})",
+      "    @ Base ./loading.jl:768",
+      "  [6] _require_search_from_serialized(pkg::Base.PkgId, sourcepath::String)",
+      "    @ Base ./loading.jl:854",
+      "  [7] _tryrequire_from_serialized(modkey::Base.PkgId, build_id::UInt64, modpath::String)",
+      "    @ Base ./loading.jl:783",
+      "  [8] _require_search_from_serialized(pkg::Base.PkgId, sourcepath::String)",
+      "    @ Base ./loading.jl:843",
+      "  [9] _tryrequire_from_serialized(modkey::Base.PkgId, build_id::UInt64, modpath::String)",
+      "    @ Base ./loading.jl:783",
+      " [10] _require_search_from_serialized(pkg::Base.PkgId, sourcepath::String)",
+      "    @ Base ./loading.jl:843",
+      " [11] _require(pkg::Base.PkgId)",
+      "    @ Base ./loading.jl:1097",
+      " [12] require(uuidkey::Base.PkgId)",
+      "    @ Base ./loading.jl:1013",
+      " [13] require(into::Module, mod::Symbol)",
+      "    @ Base ./loading.jl:997",
+      " [14] eval",
+      "    @ ./boot.jl:373 [inlined]",
+      " [15] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1196"
+     ]
+    }
+   ],
    "source": [
     "using Random, Distributions, Parameters, Pipe, ProgressMeter, Plots\n",
     "using Distances, LinearAlgebra, Statistics, LazySets, Roots"
@@ -160,9 +200,8 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.7.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
