--- a/calibration.ipynb
+++ b/calibration.ipynb
@@ -285,7 +285,9 @@
       "\u001b[32mHyperoptimizing 100%|████████████████████████████████████| Time: 0:02:24\u001b[39m\n",
       "\u001b[32mHyperoptimizing 100%|████████████████████████████████████| Time: 0:01:33\u001b[39m\n",
       "\u001b[32mHyperoptimizing 100%|████████████████████████████████████| Time: 0:01:23\u001b[39m\n",
-      "\u001b[32mHyperoptimizing  56%|████████████████████▏               |  ETA: 0:00:51\u001b[39m"
+      "\u001b[32mHyperoptimizing 100%|████████████████████████████████████| Time: 0:02:18\u001b[39m\n",
+      "\u001b[32mHyperoptimizing 100%|████████████████████████████████████| Time: 0:02:05\u001b[39m\n",
+      "\u001b[32mHyperoptimizing  28%|██████████▏                         |  ETA: 0:01:27\u001b[39m"
      ]
     }
    ],
